2023-10-21T16:19:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6598419074 # 1275
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-21
* notice: last 14d: unq all: 11 60
* notice: prev accum: outdated-unq outdated-all / unq all: 269 916 / 278 947
* notice: next accum: outdated-unq outdated-all / unq all: 269 916 / 280 976
* notice: prev exec diff / last date diff / accum: unq all: +2 +29 -0 -0 / +2 +29 -0 -0 / 2 29
* notice: removed / changed dates: [] / [2023-10-21]

2023-10-21T01:10:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6594284415 # 1273
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-21
* notice: last 14d: unq all: 9 31
* notice: prev accum: outdated-unq outdated-all / unq all: 269 916 / 276 941
* notice: next accum: outdated-unq outdated-all / unq all: 269 916 / 278 947
* notice: prev exec diff / last date diff / accum: unq all: +2 +6 -0 -0 / +3 +10 -0 -0 / 3 10
* notice: removed / changed dates: [] / [2023-10-20]

2023-10-20T16:21:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6590232226 # 1272
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-20
* notice: last 14d: unq all: 7 25
* notice: prev accum: outdated-unq outdated-all / unq all: 268 914 / 275 937
* notice: next accum: outdated-unq outdated-all / unq all: 269 916 / 276 941
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [2023-10-06] / [2023-10-20]

2023-10-19T01:12:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6568515614 # 1267