@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-21T16:19:33Z",
-  "count_outdated" : 916,
-  "uniques_outdated" : 269,
+  "timestamp" : "2023-10-23T16:20:52Z",
+  "count_outdated" : 918,
+  "uniques_outdated" : 270,
   "count" : 976,
   "uniques" : 280,
   "views" : [
-    {
-      "timestamp": "2023-10-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-10T00:00:00Z",
       "count": 7,
