@@ -1,12 +1,7 @@
 {
-  "count": 60,
-  "uniques": 11,
+  "count": 58,
+  "uniques": 10,
   "views": [
-    {
-      "timestamp": "2023-10-09T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-10-10T00:00:00Z",
       "count": 7,
